--- a/front/src/app/story/story.component.html
+++ b/front/src/app/story/story.component.html
@@ -1,6 +1,6 @@
 <p>story works!</p>
 
-<ng-container *ngFor="let s of story">
+<ng-container *ngFor="let s of story.story">
     <app-image [prompt]="s.desc"></app-image>
   <p >{{s.text}}</p>
 
