--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,10 +1,76 @@
-<h1>Welcome to FableWriter</h1>
 
-<button (click)="genStory()">Créer une histoire</button>
-<input type="text" [formControl]="prompt" placeholder="id de l'histoire">
-<input type="checkbox" checked="true" [formControl]="isDemo">Demo mode
 
-<app-story [story]="story |async"></app-story>
+<header class="primary-header">
+  <div class="container">
+    <a class="skip-nav-link" href="#main-content">
+      skip navigation
+    </a>
+    <nav aria-label="primary navigation" class="primary-nav">
+      <ul role="list" class="nav-list">
+        <li class="active"><a href="/">Home</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Books</a></li>
+        <li><a href="">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
 
+
+
+<main id="main-content">
+
+
+  
+  <section class="hero">
+    <div class="container">
+      <h1>Welcome to FableWriter</h1>
+      <p>A fable generator / creator..</p>
+    </div>
+  </section>
+
+  <section class="form">
+    <div class="container">
+
+      <div>
+        <div class="form-group">
+          <label for=""></label>
+          <input
+            type="text"
+            [formControl]="prompt"
+            placeholder="prompt de l histoire"
+            class="form-control"
+            id=""
+          />
+        </div>
+
+        <div class="form-group">
+          <label for=""></label>
+          <input type="checkbox" checked="true" [formControl]="isDemo" />Demo
+          mode
+        </div>
+
+        <button (click)="genStory()">Créer une histoire</button>
+      </div>
+
+
+      <div class="story-rendering">
+        <app-story [story]="story | async"></app-story>
+      </div>
+
+      
+    </div>
+  </section>
+  
+
+
+
+</main>
+
+<footer>
+  <div class="container">
+    <p>2023</p>
+  </div>
+</footer>
 
 <router-outlet></router-outlet>
