--- a/front/src/app/app.component.scss
+++ b/front/src/app/app.component.scss
@@ -2,15 +2,15 @@
 
 :root {
   // colors______________
-  // dark
-  --clr-body-dark: white;
-  --clr-bg-dark: black;
-  // light
-  --clr-body-light: black;
-  --clr-bg-light: hsl(0, 0%, 100%);
+  // // dark
+  // --clr-body-dark: white;
+  // --clr-bg-dark: black;
+  // // light
+  // --clr-body-light: black;
+  // --clr-bg-light: hsl(0, 0%, 100%);
 
-  --foreground: var(--clr-body-light);
-  --background: var(--clr-body-dark);
+  // --foreground: var(--clr-body-light);
+  // --background: var(--clr-body-dark);
 
   --clr-green-500:#18534F;
   --clr-green-400:#226D68;
@@ -29,14 +29,17 @@
   --fw-regular: 400;
   --fw-semi-bold: 500;
   --fw-bold: 700;
+
+
+
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    --background: var(--clr-bg-light);
-    --foreground: var(--clr-bg-dark);
-  }
-}
+// @media (prefers-color-scheme: light) {
+//   :root {
+//     --background: var(--clr-bg-light);
+//     --foreground: var(--clr-bg-dark);
+//   }
+// }
 /* RESET____________________________________________________________ */
 /* https://piccalil.li/blog/a-modern-css-reset */
 
@@ -119,12 +122,12 @@ body {
   font-size: 1.06825rem;
   font-weight: 500;
   font-family: var(--ff-body);
-  color: var(--clr-body-light);
-  background-color: var(--clr-bg-light);
+  color: var(--clr-green-500);
+  background-color: var(--clr-green-100);
 }
 
 section {
-  // border: 1px solid red;
+  border: 1px solid red;
   padding-block: min(10vh, 10rem);
 }
 
@@ -203,68 +206,152 @@ p[data-width="wide"] {
 }
 
 
-// header_____________________________
-nav ul {
-	--_gap: 2rem;
-	display: flex;
-	margin: 0;
-	padding: 0;
-	list-style: none;
+//button
+
+.button {
+  display: inline-flex;
+  cursor: pointer;
+  text-decoration: none;
+  border: 0;
+  border-radius: 100vmax;
+  padding: 1.25em 2.5em;
+  font-weight: 700;
+  font-size: 1rem;
+  line-height: 1;
+  color: black;
+  background-color: var(--clr-green-400);
+  box-shadow: 0 1.125em 1em -1em var(--clr-green-500);
+}
+.button:hover,
+.button:focus-visible {
+  background-color: var(--clr-accent-300);
 }
 
-nav a {
-	color: inherit;
-	opacity: 0.7;
-	text-decoration: none;
-	font-weight: 500;
+.btn--sm{
+  display: none;
+}
+@media (min-width: 47em) {
+  .btn--sm {
+    display: inline-flex;
+  }
 }
 
-nav a:hover,
-nav a:focus-visible {
-	opacity: 1;
+// hero
+
+.hero{
+  padding-block: 5rem;
 }
 
-nav li {
-	overflow: hidden;
-	position: relative;
-	padding: calc(var(--_gap) / 2);
-	min-inline-size: 3rem;
+.primary-heading{
+  font-size: 2.5rem;
+  line-height: 1.1;
+  font-weight:700;
 }
 
-nav li::after {
-	content: '';
-	position: absolute;
-	inset-inline: 0;
-	inset-block-end: 0;
-	block-size: 3px;
-	background-color: cyan;
-
-	translate: var(--_translate, 0);
-	scale: var(--_scale, 0) 1;
-	transition:
-		scale 100ms var(--_scale-delay, 0ms), 
-		translate 200ms;
+.secondary-heading{
+  font-size: 1.875rem;
+  line-height: 1.1;
+  font-weight:700;
 }
 
-/* A previous sibling is hovered */
-nav li:hover ~ li {
-	--_translate: -100%;
-	--_scale-delay: 200ms;
+.columns {
+  display: grid;
+  gap: 1rem;
 }
 
-/* Any other sibling is hovered */
-nav:hover li {
-	--_translate: 100%;
-	--_scale-delay: 200ms;
+@media (min-width: 47em) {
+  .columns {
+    grid-auto-flow: column;
+    grid-auto-columns: 1fr;
+  }
 }
 
-/*
-  The actually hovered <li>
+@media (max-width: 47em) {
+  .hero {
+    text-align: center;
+    p{
+      margin-inline: auto;
+    }
+  }
 
-  NOTE: same specificity as previous selector, so it must either come after or be artificially inflated (eg. :hover:hover)
-*/
-nav li:hover {
-	--_scale: 1;
-	--_translate: 0;
-	--_scale-delay: 0ms;
 }
+
+// steps
+
+.fableSteps{
+  padding-block: 5rem;
+}
+
+.steps{
+  counter-reset: count;
+  width: fit-content;
+  margin-inline: auto;
+  li{
+    counter-increment: count;
+  }
+  div{
+    display: grid;
+    position: relative;
+    align-items: center;
+    column-gap: 0.75rem;
+    grid-template-columns: min-content 1fr;
+  }
+}
+
+
+.step__title {
+  font-size: 1rem;
+  font-weight: 700;
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+  line-height: 1;
+}
+
+.step__body {
+  grid-column: 1 / -1;
+  max-width: 42ch;
+}
+
+@media (min-width: 30em) {
+  .step__body {
+    grid-column: 2 / -1;
+  }
+}
+
+.steps div::before,
+.steps div::after {
+  height: 40px;
+}
+
+.steps div::before {
+  content: "0" counter(count);
+  display: flex;
+  align-items: center;
+  color: black;
+  font-weight: 700;
+  background-color: var(--clr-green-400);
+  padding: 0 1.5rem;
+  border-radius: 100vw;
+  grid-row: 1 / 2;
+  grid-column: 1 / 2;
+}
+
+@media (max-width: 30em) {
+  .steps div::after {
+    --bg: var(--clr-gold-200);
+    content: "";
+    display: block;
+    z-index: -1;
+    border-radius: 100vw 0 0 100vw;
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+    box-shadow: 5em 0 0 var(--bg);
+    background: var(--bg);
+  }
+}
+
+// form
+// form {
+//   margin: 2em auto;
+//   max-width: 750px;
+// }
